--- a/style.css
+++ b/style.css
@@ -149,8 +149,8 @@ header{
 /* online style start */
 .online{
     min-height: 50px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 150px;
+    margin-bottom: 150px;
 }
 .online-container{
     max-width: 1400px;
@@ -201,7 +201,7 @@ header{
 .games{
     /* background-color: #caeaf7; */
     min-height: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 .games-container{
     /* border: 1px solid tomato; */
@@ -252,25 +252,27 @@ header{
 }
 .footer-container{
     max-width: 1400px;
-    border: 1px solid wheat;
-    min-height: 500px;
+    /* border: 1px solid wheat; */
+    min-height: 450px;
     margin: 0 auto;
+    padding: 150px 0 0 0;
 }
 .copyright{
     color: rgba(255, 255, 255, 0.60);
     text-align: center;
+    /* background-color: #ff0050; */
     font-size: 1rem;
     font-weight: 500;
 }
 .footer-logo{
     /* background-color: #4EC5F7; */
-    border: 1px solid rgb(232, 89, 6);
+    /* border: 1px solid rgb(232, 89, 6); */
     min-height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 .footer-logo img{
     width: 70px;
@@ -285,9 +287,9 @@ header{
     color: #F948B2;
 }
 .footer-story{
-    border: 1px solid rgb(232, 89, 6);
+    /* border: 1px solid rgb(232, 89, 6); */
     min-height: 30px;
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -297,10 +299,16 @@ header{
     color: #FFF;
     font-size: 1rem;
 }
+.footer-story:hover{
+    cursor: pointer;
+}
+.footer-story p:hover{
+    color: #F948B2;
+}
 .footer-icons{
-    border: 1px solid rgb(6, 232, 96);
+    /* border: 1px solid rgb(6, 232, 96); */
     min-height: 50px;
-    margin-top: 50px;
+    margin-top: 30px;
     /* background-color: #4EC5F7; */
     /* display: flex; */
 }
@@ -319,14 +327,33 @@ header{
     text-decoration: none;
     /* background-color: #8758F1; */
 }
-.fa-facebook{
+.fa-twitter:hover{
+    color: #00acee;
+}
+.fa-facebook:hover{
     color: #1877F2;
 }
-.fa-youtube{
+.fa-youtube:hover{
     color: #FF0000;
+}
+.fa-linkedin-in:hover{
+    color: #0072b1;
+}
+.fa-instagram:hover{
+    color: #cd486b;
+}
+.fa-apple:hover{
+    color: #66b447;
 }
 
 .footer-tarms{
-
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 30px;
+}
+.footer-tarms p{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: .8rem;
 }
 /* footer section end */
