--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ header{
     justify-content: space-between;
 }
 .online-card-img{
+    width: 330px;
     border-radius: 16px;
 }
 .online-card-img img{
@@ -187,6 +188,44 @@ header{
     font-size: 1rem;
     margin-top: 20px;
 }
+.online-card-three {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  button{
+    font-size: 20px;
+    color: red;
+    padding: 5px 15px;
+    border-radius: 10px;
+    border: none;
+  }
+  
+  .overlay:hover {
+    opacity: 1;
+    cursor: pointer;
+    font-size: 1.5rem;
+  }
+  
+  .overlay-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red;
+    text-align: center;
+  }
 /* online style end */
 
 /* play games style start */
